<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_entry">

    <fragment
        android:id="@+id/nav_entry"
        android:name="com.example.gradingapp.ui.entry.EntryFragment"
        android:label="@string/menu_entry"
        tools:layout="@layout/fragment_entry" />

    <fragment
        android:id="@+id/nav_view"
        android:name="com.example.gradingapp.ui.view.ViewFragment"
        android:label="@string/menu_view"
        tools:layout="@layout/fragment_view" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.gradingapp.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />
</navigation>